objects/AreaAddressRange__c.object
<CustomObject>
    <description>Address ranges in areas that are defined by address range.</description>
    <fields>
        <fullName>AreaAddressRangeEID__c</fullName>
        <description>The Enterprise ID of this Area Address Range.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID of this Area Address Range.</inlineHelpText>
        <label>Area Address Range EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>The area containing this entire address range.</description>
        <inlineHelpText>The area containing this entire address range.</inlineHelpText>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Area Address Ranges</relationshipLabel>
        <relationshipName>AreaAddressRanges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FromNumberCode__c</fullName>
        <description>The street number, alone, that starts this address range.</description>
        <inlineHelpText>The street number, alone, that starts this address range.</inlineHelpText>
        <label>From Number</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FromZipCode__c</fullName>
        <description>The zip code of the address that starts this address range.</description>
        <inlineHelpText>The zip code of the address that starts this address range.</inlineHelpText>
        <label>From Zip Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetName__c</fullName>
        <description>Only the name of the street, without its number or street type. For example, &quot;Sunset&quot;, NOT &quot;Sunset Blvd&quot; and NOT &quot;6464 Sunset Blvd.&quot;</description>
        <inlineHelpText>Only the name of the street, without its number or street type. For example, &quot;Sunset&quot;, NOT &quot;Sunset Blvd&quot; and NOT &quot;6464 Sunset Blvd.&quot;</inlineHelpText>
        <label>StreetName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetType__c</fullName>
        <description>The street type designation.</description>
        <inlineHelpText>The street type designation.</inlineHelpText>
        <label>Street Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blvd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bypass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Causeway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esplanade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knoll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plaza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promenade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ToNumberCode__c</fullName>
        <description>The street number that ends this address range.</description>
        <inlineHelpText>The street number that ends this address range.</inlineHelpText>
        <label>To Number</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToZipCode__c</fullName>
        <description>The zip code of the address that ends this address range.</description>
        <inlineHelpText>The zip code of the address that ends this address range.</inlineHelpText>
        <label>To Zip Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Area Address Range</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Area Address Range Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area Address Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>